--- a/react-and-morty/src/App.css
+++ b/react-and-morty/src/App.css
@@ -4,50 +4,148 @@
   box-sizing: border-box;
 }
 
-.App {
-  width: 100%;
+body {
   min-height: 100vh;
-  background-color: beige;
-
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  flex-direction: column;
+  position: relative;
+  background-color: #191970;
 }
 
-.logo {
-  width: 75%;
-}
+header.App {
+  width: 100%;
+  height: 30vh;
 
-.btn-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20px;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.logoA {
+  text-align: center;
+}
+
+.logo {
+  max-width: 80%;
+}
+
+.btn-container {
+  margin: auto;
+  margin-top: 50px;
+  padding-bottom: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
 }
 
 .charactersBtn,
 .locationsBtn {
-  padding: 20px;
-  font-size: 1.5em;
+  padding: 15px 0;
+  min-width: 200px;
+  font-size: 1.3em;
   font-weight: bold;
+  font-family: "Otomanopee One", display;
+  text-decoration: none;
+  text-align: center;
+  color: black;
   background-color: #22a2bd;
   border: none;
-  border-radius: 50px;
+  border-bottom: 5px solid greenyellow;
+  /* border-radius: 15px 15px 5px 5px; */
   cursor: pointer;
-  transition: background-color 0.3s, color 0.3s;
+  transition: background-color 0.3s, box-shadow 0.3s, border-bottom 0.3s;
+  z-index: 20;
 }
 
 .charactersBtn:hover,
-.locationsBtn:hover {
-  background-color: #2dbdda;
-  color: rgb(27, 27, 27);
+.locationsBtn:hover,
+.charactersBtn:focus,
+.locationsBtn:focus {
+  background-color: #85d665;
+  border-bottom: 5px solid #191970;
+  box-shadow: 0 0 15px 5px #95fb65;
 }
 
-.charactersPage {
+.desc-container {
+  display: block;
+  max-width: 80%;
+  margin: 20vh auto 0 auto;
+  text-align: center;
+  color: #85d665;
+  font-size: 1.5em;
+  font-family: Roboto;
+  line-height: 2em;
+}
+
+#desc-main.hide {
   display: none;
 }
 
-.charactersPage.show {
+.desc {
   display: block;
+}
+
+.desc-char,
+.desc-loc {
+  display: none;
+  font-family: "Otomanopee One", displaying;
+  max-width: 80%;
+  padding: 5px;
+  border-bottom: 2px solid #95fb65;
+  text-align: center;
+  margin: auto;
+}
+
+.desc-char.show,
+.desc-loc.show {
+  display: block;
+}
+
+.pagination-container {
+  display: flex;
+  height: 100px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+}
+
+.svg-container {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 0;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.svg-container.hide {
+  display: none;
+}
+
+.dab-main {
+  width: 15%;
+  margin: 0 0 2vh 5vh;
+  mix-blend-mode: luminosity;
+}
+
+.look-main {
+  width: 18%;
+  margin: 0 5vh 2vh 0;
+  mix-blend-mode: luminosity;
+}
+
+@media screen and (max-width: 1100px) {
+  .desc-container {
+    margin: 10vh auto 0 auto;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .btn-container {
+    flex-direction: column;
+    gap: 30px;
+  }
 }
